data/derived/fa15/progs/unify/prog3311.ml.out
Characters 77-108:
  |0 -> buildSine(build(rand, depth-1))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
